--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <link href="style.css" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
+    <meta property="og:description" content="Обычное резюме, ничего особенного." />
+    <meta property="og:image" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
     <title>Моё резюме</title>
 </head>
 <body>
