--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html prefix="og: http://ogp.me/ns#">
+<html xmlns:og="http://opengraphprotocol.org/schema/" dir="ltr" lang="ru-RU" prefix="og: http://ogp.me/ns#">
 <head>
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
