--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:og="http://opengraphprotocol.org/schema/" dir="ltr" lang="ru-RU" prefix="og: http://ogp.me/ns#">
-<head>
+<html>
+<head lang="ru-RU" prefix="og: http://ogp.me/ns#">
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
     <meta charset="UTF-8">
