--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<html>
-<head lang="ru-RU" prefix="og: http://ogp.me/ns#">
+<html lang="ru-RU" prefix="og: http://ogp.me/ns#"/>
+<head>
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
     <meta charset="UTF-8">
