--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html lang="ru-RU" prefix="og: http://ogp.me/ns#"/>
+<html lang="ru-RU" prefix="og: http://ogp.me/ns#">
 <head>
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
     <meta charset="UTF-8">
     <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
     <meta property="og:description" content="Обычное резюме, ничего особенного." />
-    <meta property="og:image" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
+    <meta property="og:image:secure_url" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
 </head>
 <body>
     <div id="header">
