--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
     <meta property="og:description" content="Обычное резюме, ничего особенного." />
-    <meta property="og:image:secure_url" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
+    <meta property="og:image" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
 </head>
 <body>
     <div id="header">
