--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
     <meta charset="UTF-8">
-    <meta property="og:title" value="Резюме Овсянникова Виталия Викторовича" />
+    <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
     <meta property="og:description" content="Обычное резюме, ничего особенного." />
     <meta property="og:image:url" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
 </head>
