--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link href="style.css" rel="stylesheet">
     <title>Моё резюме</title>
     <meta charset="UTF-8">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://degsteroz.github.io/" />
     <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
     <meta property="og:description" content="Обычное резюме, ничего особенного." />
-    <meta property="og:image:url" content="https://pp.userapi.com/c840537/v840537919/7bfac/Kb3fOSgaiBA.jpg" />
+    <meta property="og:image" content="https://pp.userapi.com/c848520/v848520145/74a4e/yvpIbBAJ1nI.jpg" />
 </head>
 <body>
     <div id="header">
