--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="https://degsteroz.github.io/" />
     <meta property="og:title" content="Резюме Овсянникова Виталия Викторовича" />
     <meta property="og:description" content="Обычное резюме, ничего особенного." />
-    <meta property="og:image" content="https://pp.userapi.com/c848520/v848520145/74a4e/yvpIbBAJ1nI.jpg" />
+    <meta property="vk:image" content="https://pp.userapi.com/c848520/v848520145/74a4e/yvpIbBAJ1nI.jpg" />
 </head>
 <body>
     <div id="header">
