--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -14,22 +14,22 @@ const isPowerOfThree = (num)=>{
   return isPowerOfThree(num);
 }
 let a=0;
-prompt(a);
+a=prompt(a);
 alert(isPowerOfThree(a));
 // END
 </script>
 КОД:
-const isPowerOfThree = (num)=>{
-  if (num===1){
-    return true;
-  }else if(num<1){
-    return false;
-  }
-  num=num/3;
-  return isPowerOfThree(num);
-}
-let a=0;
-prompt(a);
-alert(isPowerOfThree(a));
+<p>const isPowerOfThree = (num)=>{
+ <p> if (num===1){
+    <p>return true;
+  <p>}else if(num<1){
+  <p>  return false;
+  <p>}
+ <p> num=num/3;
+ <p> return isPowerOfThree(num);
+<p>}
+<p>let a=0;
+<p>a=prompt(a);
+<p>alert(isPowerOfThree(a));
 </body>
 </html>
