--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -7,7 +7,7 @@
 <p>const isPowerOfThree = (num)=>{
  <p> if (num===1){
     <p>return true;
-  <p>}else if(num<1){
+ <p>}else if(num<1){</p>
   <p>  return false;
   <p>}
  <p> num=num/3;
