--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+ <head>
+  <link href="style.css" rel="stylesheet">
+ </head>
 <body>
 
 
@@ -32,7 +35,7 @@ const isPowerOfThree = (num)=>{
 }
 let a=0;
 a=prompt(a);
-alert(isPowerOfThree(a));
+alert('Введите число для проверки. Если число является 3 в степени n, то код вернёт true', isPowerOfThree(a));
 // END
 </script>
 </body>
