--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -35,7 +35,7 @@ const isPowerOfThree = (num)=>{
 }
 let a=0;
 a=prompt(a);
-alert('Введите число для проверки. Если число является 3 в степени n, то код вернёт true', isPowerOfThree(a));
+alert(isPowerOfThree(a));
 // END
 </script>
 </body>
