--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -4,7 +4,11 @@
   <link href="style.css" rel="stylesheet">
  </head>
 <body>
-
+        <div id="header">
+        <h1>Три в степени</h1>
+<h3>При вводе числа опредяет является число тройкой в n-ой степени
+    </h3>
+</div>
 
 КОД:
 <p>const isPowerOfThree = (num)=>{
@@ -19,7 +23,6 @@
 <p>let a=0;
 <p>a=prompt(a);
 <p>alert(isPowerOfThree(a));
-  
   
   
   <script>
