--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>Обработка фото и видео</li>
             <li>Профессиональное приготовление кофе</li>
         </ul>
+        <h3><a href ="list.html">Список проектов с HEXLIT</a></h3>
     </div>
     <div id="footer">
         <b>Овсянников Виталий Викторович</b>
