--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <li>Обработка фото и видео</li>
             <li>Профессиональное приготовление кофе</li>
         </ul>
-        <h3><a href ="list.html">Список проектов с HEXLIT</a></h3>
     </div>
     <div id="footer">
         <b>Овсянников Виталий Викторович</b>
         <p> <a href="mailto:degster@ya.ru">Degster@ya.ru</a>, 
         <a href="https://vk.com/urahara_kisuke">https://vk.com/urahara_kisuke</a></p>
+        <a href ="list.html">Список проектов с HEXLIT</a>
     </div>
 </body>
 </html>
