--- a/list.html
+++ b/list.html
@@ -9,7 +9,7 @@
 <h3>Список проектов</h3> </div>
 <div id="main">
     <ul>
-        <li><a href="ispowerofthree.html">Три в степени?</a></li>
+        <li><a href="isPowerOfThree.html">Три в степени?</a></li>
     </ul>
 </div>
 <div id="footer"><a href="index.html">Назад</a></div>
