--- a/isPowerOfThree.html
+++ b/isPowerOfThree.html
@@ -10,7 +10,7 @@
     </h3>
 </div>
 
-<div id = "box2" style="float: left; width: auto;">
+<div id = "box2">
 <b><h4>Мой код</b><br/></h4>
 const isPowerOfThree = (num)=&gt;{<br/>  if (num===1){<br/>   
  return true;<br/>  
