--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
 <div id="main">
     <ul>
         <li><a href="isPowerOfThree.html">Три в степени?</a></li>
+        <li><a href="isPalindrome.html">Палиндром или нет</a></li>
     </ul>
 </div>
 <div id="footer"><a href="index.html">Назад</a></div>
