--- a/game.html
+++ b/game.html
@@ -107,11 +107,12 @@
                     rightCount+=level5();
                     break;
                 }
-            }
+              }
             }
             alert(`Число правильных ответов: ${rightCount}`);
       }
 
         </script>
+        <div id="footer"><a href="list.html">Назад</a></div><br/>
     </body>
 </html>
