--- a/list.html
+++ b/list.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="isPowerOfThree.html">Три в степени?</a></li>
         <li><a href="isPalindrome.html">Палиндром или нет</a></li>
+      <li><a href="game.html">Найди число</a></li>
     </ul>
 </div>
 <div id="footer"><a href="index.html">Назад</a></div>
